# TCIABrowser

./: .gitignore  CMakeLists.txt  Documentation.md  README.md  User Guide for 3D Slicer TCIA Browser.pptx
TCIABrowser/: .TCIABrowser.py.swp  CMakeLists.txt  TCIABrowser.py  TCIABrowser.py~
TCIABrowser/Resources/Keys/: slicer_api_key.xml  user_api_keys.xml
TCIABrowser/TCIABrowserLib/: APISettingsPopup.py  TCIAClient.py  __init__.py  clinicalDataPopup.py
TCIABrowser/Testing/Python/: CMakeLists.txt  Helper.py  TCIABrowserModuleAPIV1Test.py  TCIABrowserModuleAPIV3Test.py
TCIABrowser/Util/: reportStats.py
